# iSFM

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  MANIFEST.in  README.md  build.bat  build.sh  environment.yml  main.py  pyproject.toml  recompile.bat  setup.py  setup_isfm_ubuntu.sh  setup_isfm_windows.ps1  test_import.py  tracking.md  utils.py  vcpkg.json  verify_setup.py
bindings/: image_bindings.cpp  pybind_main.cpp  types_binding.cpp
examples/: example_image_pipeline.py
python/: bindings.cpp
python/hybrid_sfm/: __init__.py  _core.pyd  hybrid_sfm
python/hybrid_sfm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/core/cuda/: image_ops.cu
src/core/types/: camera.cpp  camera.h  common.h  features.h  image.cpp  image.h
src/core/utils/: colmap_io.cpp  colmap_io.h  image_io.cpp  image_io.h
tests/cpp/: test_camera.cpp  test_image.cpp
tests/python/: import_test.py  test_camera.py  test_image.py
